# opentelemetry-pybind11

./: BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  README.md  check_prerequisites.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build-wheels.yml  publish-distro.yml
honeycomb-pycpp-distro/: README.rst  pyproject.toml  test-requirements.txt
honeycomb-pycpp-distro/src/honeycomb/pycpp/distro/: __init__.py  patch_api.py
honeycomb-pycpp-distro/tests/: __init__.py  test_distro.py
honeycomb/pycpp/distro/: __init__.py  patch_api.py  version.py
honeycomb/pycpp/distro/embedded/: otel.yaml
include/: tracer_wrapper.h
opentelemetry-cpp-distro/: README.rst  pyproject.toml  test-requirements.txt
opentelemetry-cpp-distro/src/opentelemetry/cpp/distro/: __init__.py
opentelemetry-cpp-distro/tests/: test_distro.py
src/: bindings.cpp  tracer_wrapper.cpp
tests/: test_api.py  test_tracing_api.py
tests/testdata/: otel.yaml
