[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.15", "pybind11>=2.10.0", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Honeycomb Authors", email = "support@honeycomb.io"},
]
name = "honeycomb-pycpp"
version = "0.1.0"
description = "Python bindings for OpenTelemetry C++ SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/honeycombio/honeycomb-pycpp"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = "*-musllinux_*"
build-verbosity = 1
before-build = """
  pip install -r requirements-dev.txt
"""
environment = { PIP_ONLY_BINARY="cmake" }
test-command = "python -c 'import otel_cpp_tracer; print(\"Import successful\")'"
before-all = """
  set -ex

  ARCH=$(uname -m)

  # Determine install prefix before the cache check so restore goes to the right place.
  CURL_SSL_OPTS="--with-openssl"
  INSTALLDIR="/usr/local"
  if command -v brew &> /dev/null; then
    INSTALLDIR="$(brew --prefix)"
  fi

  # Per-arch cache: /project is the workspace mount inside Linux containers;
  # $GITHUB_WORKSPACE is used on macOS where the script runs on the host directly.
  if [ -d "/project" ]; then
    CACHE="/project/.cibw-cache/$ARCH"
  elif [ -n "$GITHUB_WORKSPACE" ]; then
    CACHE="$GITHUB_WORKSPACE/.cibw-cache/$ARCH"
  else
    CACHE="$HOME/.cibw-cache/$ARCH"
  fi
  STAMP="$CACHE/.built-curl-8.4.0-protobuf-3.21.12-json-3.11.3-otel-1.26.0"

  if [ -f "$STAMP" ]; then
    echo "Cache hit for $ARCH — restoring deps"
    (cd "$CACHE/usr" && tar -cf - .) | (cd "$INSTALLDIR" && tar -xf -)
    ldconfig || true
    exit 0
  fi

  echo "Cache miss for $ARCH — building from source"

  # Install build tools and dependencies (check which package manager is available)
  if command -v yum &> /dev/null; then
    # Try cmake first, fall back to cmake3
    yum install -y cmake gcc-c++ openssl-devel libcurl-devel zlib-devel wget tar autoconf automake libtool yaml-cpp-devel || \
    yum install -y cmake3 gcc-c++ openssl-devel libcurl-devel zlib-devel wget tar autoconf automake libtool yaml-cpp-devel
    # Create cmake symlink if only cmake3 exists
    if [ ! -f /usr/bin/cmake ] && [ -f /usr/bin/cmake3 ]; then
      ln -sf /usr/bin/cmake3 /usr/bin/cmake
    fi
  elif command -v apt-get &> /dev/null; then
    apt-get update
    apt-get install -y cmake g++ libssl-dev libcurl4-openssl-dev zlib1g-dev wget autoconf automake libtool libyaml-cpp-dev
  elif command -v brew &> /dev/null; then
    brew install cmake openssl curl wget autoconf automake libtool yaml-cpp grpc
    OPENSSL_OPTS="-DOPENSSL_ROOT_DIR=$(brew --prefix openssl)"
    CURL_OPTS="-DCURL_ROOT_DIR=$(brew --prefix curl)"
    CURL_SSL_OPTS="--with-openssl=$(brew --prefix openssl)"
  fi

  # Build and install a newer curl (required for OpenTelemetry HTTP exporter)
  cd /tmp
  wget -q https://curl.se/download/curl-8.4.0.tar.gz
  tar -xzf curl-8.4.0.tar.gz
  cd curl-8.4.0
  ./configure --prefix=$INSTALLDIR $CURL_SSL_OPTS
  make -j2
  make install
  ldconfig || true

  if ! command -v brew &> /dev/null; then
    # Build and install a newer protobuf with CMake (required for OpenTelemetry)
    cd /tmp
    wget -q https://github.com/protocolbuffers/protobuf/releases/download/v21.12/protobuf-cpp-3.21.12.tar.gz
    tar -xzf protobuf-cpp-3.21.12.tar.gz
    cd protobuf-3.21.12
    cmake -B build -DCMAKE_INSTALL_PREFIX=$INSTALLDIR -DCMAKE_POSITION_INDEPENDENT_CODE=ON -Dprotobuf_BUILD_TESTS=OFF
    cmake --build build -j2
    cmake --install build
    ldconfig || true
  fi

  # Install nlohmann-json
  cd /tmp
  wget -q https://github.com/nlohmann/json/releases/download/v3.12.0/json.tar.xz
  tar -xf json.tar.xz
  cd json
  cmake -B build -DCMAKE_INSTALL_PREFIX=$INSTALLDIR -DJSON_BuildTests=OFF
  cmake --build build -j2
  cmake --install build

  # Install OpenTelemetry Proto v1.10.0 (includes semantic conventions)
  cd /tmp
  wget -q https://github.com/open-telemetry/opentelemetry-proto/archive/refs/tags/v1.10.0.tar.gz
  tar -xzf v1.10.0.tar.gz

  # Install OpenTelemetry C++ SDK v1.26 (includes semantic conventions)
  cd /tmp
  wget -q https://github.com/open-telemetry/opentelemetry-cpp/archive/refs/tags/v1.26.0.tar.gz
  tar -xzf v1.26.0.tar.gz
  cd opentelemetry-cpp-1.26.0

  cmake -B build \
    -DCMAKE_CXX_STANDARD=17 \
    -DCMAKE_INSTALL_PREFIX=$INSTALLDIR \
    -DCMAKE_INSTALL_RPATH="$INSTALLDIR/lib" \
    -DCMAKE_BUILD_WITH_INSTALL_RPATH=ON \
    -DCMAKE_POSITION_INDEPENDENT_CODE=ON \
    -DOTELCPP_PROTO_PATH=/tmp/opentelemetry-proto-1.10.0 \
    -DWITH_OTLP_HTTP=ON \
    -DWITH_OTLP_GRPC=ON \
    -DBUILD_TESTING=OFF \
    -DWITH_EXAMPLES=OFF \
    -DWITH_BENCHMARK=OFF \
    -DWITH_CONFIGURATION=ON \
    -DWITH_YAML_CONFIGURATION=ON \
    -DWITH_YAML=ON \
    -DOTELCPP_VERSIONED_LIBS=ON \
    -DBUILD_SHARED_LIBS=ON

  cmake --build build -j2
  cmake --install build

  # Save compiled artifacts to cache
  mkdir -p "$CACHE/usr"
  (cd "$INSTALLDIR" && tar -cf - .) | (cd "$CACHE/usr" && tar -xf -)
  touch "$STAMP"

  # Clean up source tarballs
  cd /
  rm -rf /tmp/* || true
"""
