[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.15", "pybind11>=2.10.0", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Honeycomb Authors", email = "support@honeycomb.io"},
]
name = "honeycomb-pycpp"
version = "0.1.1a1"
description = "Honeycomb OpenTelemetry distro which embeds the C++ SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.61b0",
]

[project.urls]
Homepage = "https://github.com/honeycombio/honeycomb-pycpp"

[project.entry-points.opentelemetry_configurator]
cpp_configurator = "honeycomb.pycpp.distro:OpenTelemetryConfigurator"

[project.entry-points.opentelemetry_distro]
cpp_distro = "honeycomb.pycpp.distro:OpenTelemetryDistro"

[tool.setuptools.packages.find]
namespaces = true
exclude = ["tests*"]

[tool.setuptools.package-data]
"honeycomb.pycpp.distro" = ["embedded/otel.yaml", "py.typed"]

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = "*-musllinux_*"
build-verbosity = 1
before-build = """
  pip install -r requirements-dev.txt
"""
environment = { PIP_ONLY_BINARY="cmake" }
test-command = "python -c 'import otel_cpp_tracer; print(\"Import successful\")'"
before-all = """
  set -ex

  ARCH=$(echo "$(uname -s)-$(uname -m)" | awk '{print tolower($0)}')

  # Determine install prefix before the cache check so restore goes to the right place.
  CURL_SSL_OPTS="--with-openssl"
  INSTALLDIR="/usr/local"
  if command -v brew &> /dev/null; then
    INSTALLDIR="$(brew --prefix)"
  fi

  # Per-arch cache: /project is the workspace mount inside Linux containers;
  # $GITHUB_WORKSPACE is used on macOS where the script runs on the host directly.
  if [ -d "/project" ]; then
    CACHE="/project/.cibw-cache/$ARCH"
  elif [ -n "$GITHUB_WORKSPACE" ]; then
    CACHE="$GITHUB_WORKSPACE/.cibw-cache/$ARCH"
  else
    CACHE="$HOME/.cibw-cache/$ARCH"
  fi
  STAMP="$CACHE/.built-curl-$CURL_VERSION-protobuf-$PROTO_VERSION-json-$JSON_VERSION-otel-$CPP_VERSION"

  if [ -f "$STAMP" ]; then
    echo "Cache hit for $ARCH — restoring deps"
    (cd "$CACHE/tmp" && tar -cf - .) | (cd "/tmp" && tar -xf -) || true
    ldconfig || true
  fi

  echo "Cache miss for $ARCH — building from source"

  # Install build tools and dependencies (check which package manager is available)
  if command -v yum &> /dev/null; then
    # Try cmake first, fall back to cmake3
    yum install -y cmake gcc-c++ openssl-devel libcurl-devel zlib-devel wget tar autoconf automake libtool yaml-cpp-devel || \
    yum install -y cmake3 gcc-c++ openssl-devel libcurl-devel zlib-devel wget tar autoconf automake libtool yaml-cpp-devel
    # Create cmake symlink if only cmake3 exists
    if [ ! -f /usr/bin/cmake ] && [ -f /usr/bin/cmake3 ]; then
      ln -sf /usr/bin/cmake3 /usr/bin/cmake
    fi
  elif command -v apt-get &> /dev/null; then
    apt-get update
    apt-get install -y cmake g++ libssl-dev libcurl4-openssl-dev zlib1g-dev wget autoconf automake libtool libyaml-cpp-dev
  elif command -v brew &> /dev/null; then
    brew install cmake openssl curl wget autoconf automake libtool yaml-cpp grpc
    OPENSSL_OPTS="-DOPENSSL_ROOT_DIR=$(brew --prefix openssl)"
    CURL_OPTS="-DCURL_ROOT_DIR=$(brew --prefix curl)"
    CURL_SSL_OPTS="--with-openssl=$(brew --prefix openssl)"
  fi

  # Build and install a newer curl (required for OpenTelemetry HTTP exporter)
  if [ ! -d /tmp/curl-$CURL_VERSION ]; then
    cd /tmp
    wget -q https://curl.se/download/curl-$CURL_VERSION.tar.gz
    tar -xzf curl-$CURL_VERSION.tar.gz
  fi
  cd /tmp/curl-$CURL_VERSION
  ./configure --prefix=$INSTALLDIR $CURL_SSL_OPTS
  make -j2
  make install
  ldconfig || true

  if ! command -v brew &> /dev/null; then
    # Build and install a newer protobuf with CMake (required for OpenTelemetry)
    # on darwin, the installation of grpc automatically pulls in a newer protobuf
    if [ ! -d /tmp/protobuf-$PROTO_VERSION ]; then
      cd /tmp
      wget -q https://github.com/protocolbuffers/protobuf/releases/download/v21.12/protobuf-cpp-$PROTO_VERSION.tar.gz
      tar -xzf protobuf-cpp-$PROTO_VERSION.tar.gz
    fi
    cd /tmp/protobuf-$PROTO_VERSION
    cmake -B build -DCMAKE_INSTALL_PREFIX=$INSTALLDIR -DCMAKE_POSITION_INDEPENDENT_CODE=ON -Dprotobuf_BUILD_TESTS=OFF
    cmake --build build -j2
    cmake --install build
    ldconfig || true
  fi

  # Install nlohmann-json
  if [ ! -d /tmp/json ]; then
    cd /tmp
    wget -q https://github.com/nlohmann/json/releases/download/v$JSON_VERSION/json.tar.xz
    tar -xf json.tar.xz
  fi
  cd /tmp/json
  cmake -B build -DCMAKE_INSTALL_PREFIX=$INSTALLDIR -DJSON_BuildTests=OFF
  cmake --build build -j2
  cmake --install build

  # Install OpenTelemetry Proto v$OTEL_PROTO_VERSION (includes semantic conventions)
  if [ ! -d /tmp/opentelemetry-proto-$OTEL_PROTO_VERSION ]; then
    cd /tmp
    wget -q https://github.com/open-telemetry/opentelemetry-proto/archive/refs/tags/v$OTEL_PROTO_VERSION.tar.gz
    tar -xzf v$OTEL_PROTO_VERSION.tar.gz
  fi

  if [ ! -d /tmp/opentelemetry-cpp-$CPP_VERSION ]; then
    cd /tmp
    wget -q https://github.com/open-telemetry/opentelemetry-cpp/archive/refs/tags/v$CPP_VERSION.tar.gz
    tar -xzf v$CPP_VERSION.tar.gz
  fi
  cd /tmp/opentelemetry-cpp-$CPP_VERSION

  # On macOS, brew supplies gRPC/protobuf as shared libs so shared OTel libs work.
  # On Linux, OTel FetchContent-downloads gRPC which downloads its own protobuf as
  # a shared lib, but the protoc binary can't find libprotoc.so at build time.
  # Building static avoids that problem and produces a self-contained extension.
  if command -v brew &> /dev/null; then
    SHARED_LIBS=ON
    EXTRA_CMAKE_OPTS="-DCMAKE_INSTALL_RPATH=$INSTALLDIR/lib -DCMAKE_BUILD_WITH_INSTALL_RPATH=ON -DOTELCPP_VERSIONED_LIBS=ON"
  else
    SHARED_LIBS=OFF
    EXTRA_CMAKE_OPTS=""
  fi

  cmake -B build \
    -DCMAKE_CXX_STANDARD=17 \
    -DCMAKE_INSTALL_PREFIX=$INSTALLDIR \
    -DCMAKE_POSITION_INDEPENDENT_CODE=ON \
    -DOTELCPP_PROTO_PATH=/tmp/opentelemetry-proto-$OTEL_PROTO_VERSION \
    -DWITH_OTLP_HTTP=ON \
    -DWITH_OTLP_GRPC=ON \
    -DBUILD_TESTING=OFF \
    -DWITH_EXAMPLES=OFF \
    -DWITH_BENCHMARK=OFF \
    -DWITH_CONFIGURATION=ON \
    -DWITH_YAML_CONFIGURATION=ON \
    -DWITH_YAML=ON \
    -DBUILD_SHARED_LIBS=$SHARED_LIBS \
    $EXTRA_CMAKE_OPTS

  cmake --build build -j2
  cmake --install build

  # Save compiled artifacts to cache
  mkdir -p "$CACHE/tmp"
  for dep in opentelemetry-cpp-$CPP_VERSION json opentelemetry-proto-$OTEL_PROTO_VERSION protobuf-$PROTO_VERSION curl-$CURL_VERSION; do
    if [ -d /tmp/$dep ]; then
      mv /tmp/$dep "$CACHE/tmp/$dep"
    fi
  done
  touch "$STAMP"

  # Clean up source tarballs
  cd /
  rm -rf /tmp/* || true
"""
