[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-cpp-distro"
dynamic = ["version"]
description = "OpenTelemetry Python/C++ Distro"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "Honeycomb Authors", email = "support@honeycomb.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.61b0",
  "honeycomb-pycpp",
]

[project.entry-points.opentelemetry_configurator]
cpp_configurator = "opentelemetry.cpp.distro:OpenTelemetryConfigurator"

[project.entry-points.opentelemetry_distro]
cpp_distro = "opentelemetry.cpp.distro:OpenTelemetryDistro"

[project.urls]
Homepage = "https://github.com/honeycombio/honeycomb-pycpp/tree/main/opentelemetry-cpp-distro"
Repository = "https://github.com/honeycombio/honeycomb-pycpp"

[tool.hatch.version]
path = "src/opentelemetry/cpp/distro/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
